# aidun_bridge_c

./: .env.example  .gitignore  README.md  hermes_worker.py  pyproject.toml  requirements.txt
docs/: HERMES.md  INSTALL.md  USAGE.md
patches/hermes-windows/: hermes_platform_paths.py  ui-tui-src-banner.ts
scripts/: hermes_simulate_lookup_task.py  simulate_bridge_notify_burst.py
scripts/windows/: Apply-HermesWindowsAgentMandatoryFixes.ps1  Ensure-HermesBridgeWebhook.ps1  Install-VTeethHermes.ps1  Start-Bridge-And-Dashboard.bat  Start-桥与看板.bat  patch_browser_tool_windows_capture.py  start_bridge_and_dashboard.ps1
src/aidun_bridge_c/: __init__.py  __main__.py  aidun_chat.py  chat_webapp.py  client.py  config.py  daemon.py  hermes_gateway_slot.py  hermes_worker.py
src/aidun_bridge_c/web_static/: index.html
tests/: test_kqpool_client.py
