[project]
name = "aidun-bridge-c"
version = "0.2.19"
description = "Aidun 实例池 (kq-pool) C 端守护客户端"
readme = "README.md"
requires-python = ">=3.10"
# fastapi/uvicorn 现在由 bridge-c-core 自带(看板已下沉到 core),这里不再
# 重复声明。
dependencies = [
    "bridge-c-core @ git+https://github.com/wiseyip0911/bridge_c_core.git@v0.1.7",
]

[project.scripts]
aidun-hermes-worker = "aidun_bridge_c.hermes_worker:main"
aidun-chat = "aidun_bridge_c.aidun_chat:main"
aidun-chat-web = "aidun_bridge_c.chat_webapp:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aidun_bridge_c = ["web_static/*.html"]
